# frolov-trainer-pda-timer

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  counter.rs  main.rs
src/components/PDATimer/: PDATimer.scss  PDATimer.tsx
src/components/SessionTimer/: SessionTimer.scss  SessionTimer.tsx
src/components/Settings/: Settings.scss  Settings.tsx
src/styles/: root.scss  variables.scss
src/utils/: cn.ts
